feat(notification, leave): add event-based notifications and enhance leave management
- notification module:
  - implement event-based notifications
  - generate notifications for birthday, marriage_anniversary, resignation, employment, employee_anniversary, bond_complete, interview, evaluation, ticket, and leave events
  - create notifications automatically when users perform related actions

- leaveController:
  - remove duplicate leave request restrictions
  - allow Team Lead role to view and approve leave requests
  - add getTodayDidntCome API to display employees absent today
